--- a/catalogo.html
+++ b/catalogo.html
@@ -42,47 +42,56 @@
   </nav>
   <!-- Navbar Fin -->
 
-  <div class="row"> 
-    <div class="column">
-      <img src="images catalog/camiseta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-002.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/jogger-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/jogger-catalogo-002.jpg" style="width:100%">
-      <img src="images catalog/camiseta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-002.jpg" style="width:100%">
+<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+  
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/hero-02.jpg" alt="Los Angeles" class="d-block" style="width:100%">
     </div>
-    <div class="column">
-      <img src="images catalog/camiseta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-002.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/jogger-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/jogger-catalogo-002.jpg" style="width:100%">
-      <img src="images catalog/camiseta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-002.jpg" style="width:100%">
-    </div>  
-    <div class="column">
-      <img src="images catalog/camiseta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-002.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/jogger-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/jogger-catalogo-002.jpg" style="width:100%">
-      <img src="images catalog/camiseta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-002.jpg" style="width:100%">
+    <div class="carousel-item">
+      <img src="images/hero-03.jpg" alt="Chicago" class="d-block" style="width:100%">
     </div>
-    <div class="column">
-      <img src="images catalog/camiseta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-002.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/jogger-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/jogger-catalogo-002.jpg" style="width:100%">
-      <img src="images catalog/camiseta-catalogo-001.jpg" style="width:100%">
-      <img src="images catalog/chaqueta-catalogo-002.jpg" style="width:100%">
+    <div class="carousel-item">
+      <img src="images/hero-04.jpg" alt="New York" class="d-block" style="width:100%">
     </div>
   </div>
+  
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
 
 
 
+<div id="section1" class="container-fluid bg-primary text-white" style="padding:100px 20px;">
+  <h1>Camisetas estampadas</h1>
+  <p>Camiseta manga corta para niño (5-13 años) . Camiseta en tejido de punto. Material: 99% algodón, 1% elastano. ¡Compra en MiloKids!</p>
+  <input type="submit" value="Comprar" style="padding:10px 20px;">
+</div>
+
+<div id="section2" class="container-fluid bg-warning text-dark" style="padding:100px 20px;">
+  <h1>Moda infantil para niña, niño y bebé</h1>
+  <p>¡Estilo y moda! En MiloKids traemos estilos increíbles en cada colección, inspirados en la creatividad y la energía sin fin de los niños, diseñamos diferentes prendas que se adapten a cada actividad, juegos, actividades escolares, eventos especiales, días soleados, salidas con familia, días lluviosos y más.</p>
+  <input type="submit" value="Comprar" style="padding:10px 20px;">
+</div>
+
+<div id="section3" class="container-fluid bg-secondary text-white" style="padding:100px 20px;">
+  <h1>Ropa infantil</h1>
+  <p>¡Ellos ponen la magia y nosotros sus looks más cool! En OFFCORSS nos especializamos en hacer feliz a los más pequeños de la casa y a sus papás con nuestra ropa y zapatos, para bebés, niñas y niños desde los 0 meses hasta los 13 años. </p>
+</div>
 
   <!-- Footer -->
   <div class="container-fluid">
