Agregue boton comprar en seccion catalogo

--- a/catalogo.html
+++ b/catalogo.html
@@ -91,6 +91,7 @@
 <div id="section3" class="container-fluid bg-secondary text-white" style="padding:100px 20px;">
   <h1>Ropa infantil</h1>
   <p>¡Ellos ponen la magia y nosotros sus looks más cool! En OFFCORSS nos especializamos en hacer feliz a los más pequeños de la casa y a sus papás con nuestra ropa y zapatos, para bebés, niñas y niños desde los 0 meses hasta los 13 años. </p>
+  <input type="submit" value="Comprar" style="padding:10px 20px;">
 </div>
 
   <!-- Footer -->
